--- a/gb/23/11/17/n14118247.md
+++ b/gb/23/11/17/n14118247.md
@@ -1,23 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】台海关系 龙年有变？！</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14118315-1200x800-1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14118315-1200x800-1-600x400.jpg" />///image2=```diff
+- 推演中国历史一万年？！台海终局两千年前早已知？未来数十年中华不安定，金龙年出大转折？（《未解之谜》提供）
+```
 <h6>推演中国历史一万年？！台海终局两千年前早已知？未来数十年中华不安定，金龙年出大转折？（《未解之谜》提供）
 </h6>
 <hr>
-<p>大家好，我是扶摇。欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>今天再来给大家介绍一个在网上讨论度挺高的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a>，《乾坤万年歌》。顾名思义，在这个预言中，解读了中国一万年的历史。</p>
+<p>大家好，我是扶摇。欢迎和我一起探索未解之谜。</p>
+<p>今天再来给大家介绍一个在网上讨论度挺高的预言，《乾坤万年歌》。顾名思义，在这个预言中，解读了中国一万年的历史。</p>
+<p><center><center><a title="YouTube video player" src=""></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/Z2o5K3TFk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/z41Nvv2AP2g" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center>
 <h2>中华历史一万年？</h2>
 <p>一万年？中国的历史有那么长吗？咱们不是五千年的文明古国吗？上下五千年的历史？</p>
-<p>说起来这上下五千年的说法最早是从哪里来的，现在已经无从考证。有人说是从<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%91%E5%9B%BD.md#1">民国</a>开始流传的，也有人说是明末清初来中国的一位意大利传教士卫匡国（Martin Martini）提出来的。</p>
+<p>说起来这上下五千年的说法最早是从哪里来的，现在已经无从考证。有人说是从民国开始流传的，也有人说是明末清初来中国的一位意大利传教士卫匡国（Martin Martini）提出来的。</p>
 <p>那么这上下上五千是说上五千，下五千，总共一万年的历史，还是就这五千年分为上下两半，比如说，从秦始皇那个时候开始划分？为这事，学术界吵了很久都没吵出个结局。</p>
-<p>其实从黄帝那时候到现在也将近五千年了。当年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%91%E5%9B%BD.md#1">民国</a>推翻满清，孙中山就任临时大总统的时候就曾广发消息，说“以黄帝纪元4609年为中华民国元年”。现在又100年过去了，离黄帝纪元四千七百多年了，差不多也就是五千年吧。</p>
+<p>其实从黄帝那时候到现在也将近五千年了。当年民国推翻满清，孙中山就任临时大总统的时候就曾广发消息，说“以黄帝纪元4609年为中华民国元年”。现在又100年过去了，离黄帝纪元四千七百多年了，差不多也就是五千年吧。</p>
 <p>但黄帝那个时候中华文明已经很发达了。他骑着高头大马飞奔在战场上，他的妻子们教百姓制作丝绸的衣服。而在他之前统治中华大地的还有蚩尤和他的九黎部落，再之前还有伏羲、神农、传说中造了人的女娲，那这上古时代的历史又要怎么算呢？</p>
 <p>1970年代以后，随着各种远古的文物和遗迹纷纷被挖出来，关于中国有一万年历史的说法也慢慢开始抬头了。不然的话你没法解释浙江河姆渡遗址中7千年前的陶罐；湖南彭头山遗址中9千年前的人工栽培的稻谷；河南的贾湖遗址中8到9千年历史的文字符号，还有能吹出7个音阶的笛子。</p>
 <p>所以有人就说，咱们就照黄帝这儿来分吧。黄帝之前的五千年是中华文明从文明的开启到逐渐形成的历史，这五千年是没有文字纪录的历史时代，那些传说中的故事，您可以当历史来读，也可以当神话来听。黄帝之后从部落过渡到了国家，文明基本上成形了，也有了确切的文字记录。这五千年就是我们普遍认可的文明史了。你看司马迁《史记》的第一句话是什么？ “黄帝者，少典之子，姓公孙，名曰轩辕。”黄帝之前的事情都不提了。</p>
 <h2>《&#20094;坤万年歌》</h2>
-<p>好了，言归正传，来讲一下<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a>吧。看看这预言中的一万年是怎么说的。《&#20094;坤万年歌》也收录在我们先前介绍的《中国预言7种》这本书中，是清朝末年广为流传的几个著名的预言之一。预言是用7言绝句写成的，总共一百零六句，最后有“行仁行义立乾坤”，“我今只算万年终”这两句话，所以大家都称它为《&#20094;坤万年歌》。</p>
+<p>好了，言归正传，来讲一下预言吧。看看这预言中的一万年是怎么说的。《&#20094;坤万年歌》也收录在我们先前介绍的《中国预言7种》这本书中，是清朝末年广为流传的几个著名的预言之一。预言是用7言绝句写成的，总共一百零六句，最后有“行仁行义立乾坤”，“我今只算万年终”这两句话，所以大家都称它为《&#20094;坤万年歌》。</p>
 <p>书中说，这个预言是周朝的姜子牙所写的，还有汉朝一个叫做吕望的人做了注解。不过因为预言都用7言绝句写成，而这种诗句的体裁直到千年以后的南北朝时期才出现，而且许多语句都过于直白，文字风格跟宋朝的话本和明清章回小说很类似，所以许多读者认为，这个预言应该是是后人假托姜子牙写的。</p>
 <p>不管作者是谁吧，大家一致的看法是，只要预言说得准就行，其它不重要。那么这个预言说得准吗？</p>
 <p>先来看看这一万年从哪算起的吧。预言的第一句给出了答案：“太极未判昏已过。风后女蜗石上坐。”道家认为，所有有形的东西都生于无形，称为“无极”。无极生太极，太极生两仪，阴阳化合而生万物。用现在的话讲就是在什么都没有的原始状态中，产生了最基本的粒子，然后再一层一层，遵循阴阳之理形成万物。这第一句“太极未判昏已过。”就是混沌初开，基本粒子已经形成的状态。</p>
@@ -26,15 +29,17 @@
 <h2>关于大清的预言</h2>
 <p>比如说吧，关于清朝，预言中就是这样说的：“十八孩儿跳出来。苍生方得苏危困。相继春秋二百余。五湖云扰又风颠。”这“孩儿”可以当作“子”字来解。“十八”再加“子”就是一个“李”字。很明显，那就是把崇祯皇帝逼上歪脖树的李自成了。</p>
 <p>而在另一边，清兵入关，一番整顿之后就迎来了康熙和乾隆这祖孙俩联手打造的“康&#20094;盛世”，算是让老百姓过上了好日子。这就是“苍生方得苏危困”了。可惜清朝国运只有276年，再之后就又进入了乱世。这就是“相继春秋二百余，五湖云扰又风颠”了。这里关于大清的国运说的是“二百余”，跟真实的历史（276年）相比，有点含糊，不过有人说， 可能这恰好说明这是个真的预言吧，所以有些地方就不会那么精确了。</p>
-<h2>预言民国与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a></h2>
+<h2>预言民国与台湾</h2>
 <p>那么关于民国的预言准不准呢？目前来看，还真是挺准的。大家注意了，这本书是1915年出的。所以民国以后的预言如果说中了，那才是能让人信服的真预言。</p>
 <p>一起来看后面一句：“人丁口取江南地。京国重新又一迁。”这对应的是蒋介石领导下的国民政府无疑了。民国成立后不久就进入了军阀割据的动荡状态。1927年，蒋介石和何应钦组团北伐取得了压倒性的胜利，终于再次一统江山，在南京再次成立了国民政府。</p>
 <p>那么预言是怎么说的呢？先来看头三个字“人丁口”。这其实是个设计得非常巧妙的字谜。“丁口”两个字合在一起就是蒋介石的“石”字。而“人丁口”三个字合在一起是什么？何应钦的“何”字。是不是非常巧妙？再来看后四个字“取江南地”，有个南字在里面，又是江南，很明显就是指南京这座江南古都了。</p>
 <p>那么后半句“京国重新又一迁”呢？民国政府一开始定都北京，现在重新定都南京，若干年后为形势所迫， 不得不又迁到了台北，迁了两次。所以“京国重新又一迁”这7个字把这两迁国都的事情非常直白地点出来了。</p>
 <p>目前来看，从大清到民国这段时间预言得很准确。那么之后的呢？</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B5%B7%E5%85%B3%E7%B3%BB.md#1">台海关系</a></h2>
+</p>
+<p><center><center><a title="undefined" src="https://www.ganjing.com/zh-TW/embed/1gabgg4m3a635wm0YB0wxQH0F17k1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center>
+<h2>台海关系</h2>
 <p>“两分疆界各保守。更得相安一百九。”</p>
-<p>1949年国民政府迁都<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>后，两岸就分治了。那就是“两分疆界”了。刚分开后的1950年代，双方都嚷嚷要统一，也各自踢过几次飞腿，不过没有实质上的损伤，不久之后就都消停了。最近大陆那边虽然动作不少，不过雷声大，雨点小，搞不出多大的事情。预言中不是也说了嘛，“各保守”。“保守”这个字从字典来看的话，也有维持旧状态，不求改变或改进这么一种意思。那是不是非常符合这几十年来台海两边的状况的呢？</p>
+<p>1949年国民政府迁都台湾后，两岸就分治了。那就是“两分疆界”了。刚分开后的1950年代，双方都嚷嚷要统一，也各自踢过几次飞腿，不过没有实质上的损伤，不久之后就都消停了。最近大陆那边虽然动作不少，不过雷声大，雨点小，搞不出多大的事情。预言中不是也说了嘛，“各保守”。“保守”这个字从字典来看的话，也有维持旧状态，不求改变或改进这么一种意思。那是不是非常符合这几十年来台海两边的状况的呢？</p>
 <p>那么这种两岸分治的状况会维持到什么时候呢？来看下一句：“更得相安一百九”，明确提到时间了。不过这“一百九”怎么解读呢？是一百九十年，还是一百零九年？有人说一百九十年有点太遥远，你要说两边各95年，加起来190年那倒还说的过去。那会在什么时候？1949年再加上95年，2044年台海一统？</p>
 <p>不过也有人说，且慢，咱们得上下文结合著来看。你看下一句“那时走出草田来。手执金龙步玉阶。”这句话里有什么呢？“金龙”。下一个金龙年是哪一年？2060年。2060年是庚辰年。庚属金，辰为龙。所以这庚辰年也就是金龙年了。 那么要是把“一百九”按109年来解读，1949加109，就是2058年，跟2060的金龙年非常接近了。2058年或2060年有可能实现两岸统一吗？</p>
 <h2>未来中国</h2>
@@ -48,44 +53,47 @@
 <p>在这之后预言中又写到了好几个世代的历史。不过也有许多网友说，《万年歌》中清代以后的预言有些是被打乱了的，或许那些关于将来的预言写的都是前朝的事也未可知。所以呢，我们就不过多解读了。</p>
 <p>不管怎样吧，《万年歌》中对于当今中国的预言还是挺准的。而在预言的最后，又提到了一个在《推背图》、《马前课》和其它预言中都会提到的同样的一个概念，就是“循环往复”。《马前课》中说“前古后今，其道无穷”；《推背图》中说“终者自终，始者自始”；而《万年歌》中是怎么说的呢？“我今只算万年终。再复循环理无穷。”就是说中国的历史一万年一个轮回，一个轮回的结束就是另外一个轮回的开始。</p>
 <p>刚才说了，从黄帝到现在这“下”五千年的历史中，已经过去四千七百多年了。如果中国历史真的是一万年一个轮回，那么我们可能只剩下不到300年的时光了。300年后，人类文明真的会重新来过吗？这样的循环往复意义又在哪里呢？</p>
-<p>好了，今天的故事就讲到这里了。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇。我们下回见。</p>
-<p>订阅YouTube频道：<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
+<p>好了，今天的故事就讲到这里了。未解之谜，我是扶摇。我们下回见。</p>
+<p>订阅YouTube频道：<ahref=""></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/Z2o5K3TFk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">"></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/Z2o5K3TFk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
 订阅频道Ganjingworld频道：<ahref="https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c">https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c</a><br />
 订阅未解之谜Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
 <p>《未解之谜》节目组制作</p>
 <p>责任编辑：李梅#</p>
+<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14108863.md#1">【未解之谜】谁是中国新天子？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115209.md#1">【未解之谜】失落千年 谜一般的曷劳落迦城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115619.md#1">刘伯温《救劫碑文》预言大劫 怎样关过天番龙蛇年？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/3/n14108863.md#1">【未解之谜】谁是中国新天子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113379.md#1">【未解之谜】马前课（下）红朝国运大变更？！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115209.md#1">【未解之谜】失落千年 谜一般的曷劳落迦城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14215650.md#1">【未解之谜】2024最新预言 红朝要变天？！</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112353.md#1">很久很久以前：维多利亚时代的仙子画</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113379.md#1">【未解之谜】马前课（下）红朝国运大变更？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/15/n13439811.md#1">【声乐】神韵歌唱家分享失传的传统美声唱法（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116466.md#1">【百年真相】自创党派 清华教授的大胆行动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117959.md#1">【舞蹈三剑客】和华人沟通不NG 请你和我这样做</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116626.md#1">2023黑五提前开跑 5大类商品最受青睐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116582.md#1">大陆扫地机器人滞销 厂家降价求售</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116441.md#1">王友群：从王岐山的两个秘书被查办说开去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116452.md#1">梁朝伟拎金鸡奖座一小举动 惹小粉红玻璃心碎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116517.md#1">近年身边友人病亡多 港星廖伟雄总结惊人原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117273.md#1">中国独立导演郭珍明被限制出境 自曝护照被剪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116440.md#1">陆影视巨头华谊兄弟卖孙公司抵债 计3.5亿元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116330.md#1">阿诺上播客受访 宠物驴突然出现讨食大抢镜头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116484.md#1">“水果之神”葡萄抗老防癌 8技巧教你吃对葡萄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114493.md#1">新研究发现尿石素A强力抗衰老 5食物含量最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14108806.md#1">睡不好老得快易健忘！专家7招找回睡眠好品质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116882.md#1">当心旅游诈骗 旅游达人也曾犯菜鸟级错误</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276851.md#1">【杨延昭传奇】杨延昭威震三关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261321.md#1">【晚间新闻】涉共谍案 挪威男从中国返回时被捕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282416.md#1">【秦鹏观察】三大新闻事件背后 藏中共外交密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261320.md#1">【全球新闻】美包机遣返非法入境的中国人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281682.md#1">浙大女生申请赴美留学消息意外火爆 网民热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281736.md#1">美军机重返二战“噩梦”战场 剑指中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281880.md#1">中国经济低迷 年轻人开始“报复性存钱”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282080.md#1">《鬼灭之刃 柱训练篇》影评：高强度训练 为大战做热身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/17/n14118247.htm">【未解之谜】台海关系 龙年有变？！</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118247.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/17/n14118247.htm">【未解之谜】台海关系 龙年有变？！</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/17/n14118247.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
